/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
    id 'application'
  	id 'eclipse'
  	id 'org.openjfx.javafxplugin' version '0.0.9'
  	id 'org.beryx.jlink' version '2.12.0'
  	
}
apply plugin : 'eclipse'

sourceCompatibility = 14
targetCompatibility = 14

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

javafx {
    version = "13"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
}


mainClassName = "$moduleName/application.CandyJar"

eclipse {
    classpath {
        file {
            whenMerged {
                entries.findAll { it.properties.kind.equals('lib') }.each {
                    it.entryAttributes['module'] = 'true'
                }
            }
        }
    }
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'CandyJar'
    }
}

configurations.all {
    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        if (details.requested.name == 'log4j') {
            details.useTarget "org.slf4j:slf4j-api:2.0.0-alpha1"
        }
	}
	resolutionStrategy {
	
	force("org.slf4j:slf4j-api:2.0.0-alpha1")
	force("org.slf4j:slf4j-simple:2.0.0-alpha1")
	
	
	
	}
}
version = '1.0-alpha'

jar {

	from {
	        configurations.compile.collect {
	            it.isDirectory() ? it : zipTree(it)
	        }
	        configurations.runtime.collect {
	            it.isDirectory() ? it : zipTree(it)
	        }
	         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	        
	    }
    manifest {
	    attributes(
	            'Implementation-Title': 'CandyJar',
	            'Implementation-Version': version,
	            'Built-By': System.getProperty('user.name'),
	            'Built-Date': new Date(),
	            'Built-JDK': System.getProperty('java.version'),
	            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
	            'Main-Class': 'application.CandyJar'
	    )        
    }
}

task uberJar(type: Jar) {
    archiveClassifier = 'uber'

    from sourceSets.main.output

    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
    
    manifest {
	    attributes(
	            'Implementation-Title': 'CandyJar',
	            'Implementation-Version': version,
	            'Built-By': System.getProperty('user.name'),
	            'Built-Date': new Date(),
	            'Built-JDK': System.getProperty('java.version'),
	            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
	            'Main-Class': 'application.CandyJar'
	    )        
    }
}



task fatJar(type: Jar)  {

	manifest {
	    attributes(
	            'Implementation-Title': 'CandyJar',
	            'Implementation-Version': version,
	            'Built-By': System.getProperty('user.name'),
	            'Built-Date': new Date(),
	            'Built-JDK': System.getProperty('java.version'),
	            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
	            'Main-Class': 'application.CandyJar'
	    )        
    }
    baseName = project.name + '-all'
	from {
	        configurations.compile.collect {
	            it.isDirectory() ? it : zipTree(it)
	        }
	        configurations.runtime.collect {
	            it.isDirectory() ? it : zipTree(it)
	        }
	    }
    with jar
}

dependencies {

	implementation(group: 'javax.json', name: 'javax.json-api', version: '1.1')
	implementation(group: 'org.glassfish', name: 'javax.json', version: '1.1')
	implementation(group: 'de.gsi.chart', name: 'chartfx-chart', version: '11.1.5'){
	                                                                 
	exclude group: 'org.apache.xmlgraphics', module: 'batik-bridge'
    exclude group: 'org.apache.xmlgraphics', module: 'batik-script' 
    exclude group: 'org.apache.xmlgraphics', module: 'batik-ext'
    exclude group: 'xml-apis', module: 'xml-apis'
    exclude group: 'xerces', module: 'xercesImpl'
    exclude module: 'xalan'
    
	}
	
	implementation (group: 'com.mortennobel', name: 'java-image-scaling', version: '0.8.6')	
	implementation (group: 'commons-cli', name: 'commons-cli', version: '1.4')
	
	
		
	implementation (group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0-alpha1')

	implementation (group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1')


}
application {
    applicationDefaultJvmArgs =  [
            "--add-opens=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
            "--add-opens=javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
            "--add-opens=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
            "--add-opens=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
            "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
            "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls",
            "-Xms512m", 
            "-Xmx1024m"
            
            
            
    ]
    //mainClassName = project.findProperty("chooseMain").toString()
}





